# aiconfigurator

./: .coderabbit.yaml  .dockerignore  .gitattributes  .gitignore  AGENTS.md  ATTRIBUTIONS.md  CODEOWNERS  CONTRIBUTING.md  Cargo.toml  DEVELOPMENT.md  HANDOFF.md  README.md  allreduce_rms_perf.parquet  allreduce_rms_perf.txt  data.csv  dsa-op-integration.skill  k8s.diff  layerwise_quickstart.md  manifest.json  moe_perf.txt  new-op-integration.skill  pyproject.toml  pytest.ini
.github/: CODEOWNERS
aic-core/: API.md  pyproject.toml
collector/: README.md  capabilities.py  case_generator.py  case_specs.py  collect.py  collect_all_reduce.py  collect_comm.sh  collect_nccl.py  collect_oneccl_xpu.py  common_test_cases.py  evidence_policy.yaml  framework_manifest.json  framework_manifest.py  framework_manifest.yaml  helper.py  layerwise_design.md  model_cases.py  nvml_power_monitor.py  op_backend_catalog.yaml  op_catalog.py  parse_nsys_allreduce.py  provenance.py  registry_types.py  targeted_collection.example.json  targeted_collection.py  test_sglang_moe_nvfp4.py  test_vllm_moe_nvfp4.py  version_resolver.py
docker/: Dockerfile  Dockerfile.service
docs/: CONTEXT_PARALLEL_DSA_MODELING.md  POWER_LAW_DISTRIBUTION.md  PR_DESCRIPTION_MOE_EXTRAPOLATION.md  _config.yml  add_a_new_model.md  advanced_tuning.md  cli_user_guide.md  dsv4_sparse_work_interpolation.md  dynamo_deployment_guide.md  generator_overview.md  index.html  index.md  moe_decode_data_issue.md  pr1113_collector_v2_slides.md  pr1113_collector_v2_slides.pptx  webapp_user_guide.md
fpm_golden_runs/: KNOB_MAPPING.md  qwen36_moe.ipynb
frontend/: evaluation-detail.html  index.html
runs/: BUSY_METRIC_VERDICT.md  BUSY_METRIC_VERDICT_PARTD_RESOLUTION.md  HANDOFF_smallprefill_microcausality.md  SMALLPREFILL_MICROCAUSALITY_VERDICT.md  analyze_decode_escape.py  analyze_idle_cause.py  analyze_launch_gap.py  analyze_prefill_floor.py  analyze_tp4_trace.py  captureA_realmoe_nomarker.py  closeacct_collector.py  closeacct_golden.py  closeacct_stream.py  closeacct_stream_nvtx.py  coldwarm_ctx.py  collector_livestep.out  concurrency_ctx.py  ctx_sanity.py  dec_compare.py  dec_inter512_check.py  export_timelines.py  golden_stream_nsys.out  golden_stream_nvtx.out  host_vs_gpu_wall.py  mp_throughput_ctx.py  part2_standalone.out  part2_standalone.py  partA_kernel_class.py  partA_moe_perrank.py  partBD_collector_class.py  partB_collector_busy.sh  partB_realmoe.sh  partC_assemble.py  period_golden.out  period_golden.py  period_golden_mnbt512.out  period_golden_mnbt768.out  run4_tp1_occupancy.out  serve_nsys.sh  serve_probe.py  (+4 more)
rust/aiconfigurator-core/: Cargo.toml  README.md  deny.toml  pyproject.toml
rust/aiconfigurator-core/docs/: design_doc.html  migration-execution-plan.md  migration-map.md  parity-scan-report.md  parity-scan-runbook.md  perf-speedup-report.md  phase-1.5-capacity-followup.md  phase-1.5-execution-plan.md  phase-1.5-opspec-audit.md  phase-2-parity-scan-runbook.md  phase-2-python-dedup-plan.md  python-dedup-plan.md  support-matrix-scan.md  workflow.uml
rust/aiconfigurator-core/docs/phase1/: migration-execution-plan.md  migration-map.md  phase-1-checkpoint.md  support-matrix-scan.md
rust/aiconfigurator-core/parity_tests/: README.md  benchmark_engine_step.py  benchmarks.md  classify_drift.py  drift_map.py  parity-scan-report.md  test_compile_engine_parity.py  test_engine_step_parity.py  test_engine_step_perf.py
rust/aiconfigurator-core/python/aiconfigurator_core/: __init__.py
rust/aiconfigurator-core/python/aiconfigurator_rust_core/: __init__.py
rust/aiconfigurator-core/src/: config.rs  ffi.rs  fpm_perf.rs  interpolation.rs  lib.rs  memory.rs  model.rs  perf.rs  py.rs  python.rs  session.rs
rust/aiconfigurator-core/src/backends/: base.rs  mod.rs  vllm.rs
rust/aiconfigurator-core/src/common/: enums.rs  error.rs  system_spec.rs
rust/aiconfigurator-core/src/engine/: mod.rs  runtime.rs  spec.rs
rust/aiconfigurator-core/src/fpm/: model.rs  regression.rs  tests.rs
rust/aiconfigurator-core/src/models/: base.rs  config_loader.rs  deepseek.rs  deepseek_v32.rs  deepseek_v4.rs  deepseek_wideep.rs  deepseek_wideep_trtllm.rs  factory.rs  gemma4_moe.rs  gpt.rs  hybrid_moe.rs  llama.rs  mod.rs  moe.rs  nemotron_h.rs  nemotron_nas.rs  qwen35.rs  qwen3vl.rs  registry.rs
rust/aiconfigurator-core/src/operators/: attention.rs  base.rs  communication.rs  dsa.rs  dsv4.rs  elementwise.rs  embedding.rs  gemm.rs  mamba.rs  mhc.rs  mla.rs  mod.rs  moe.rs  moe_dispatch.rs  msa.rs  op.rs  util_empirical.rs  vision.rs  wideep_mla.rs  wideep_moe.rs
rust/aiconfigurator-core/src/perf_database/: attention.rs  communication.rs  dsa.rs  dsv4.rs  gemm.rs  interpolation.rs  mhc.rs  mla.rs  mod.rs  moe.rs  perf_interp.rs  state_space.rs  wideep.rs  wideep_mla.rs  wideep_moe.rs
rust/aiconfigurator-core/tests/: embedded_round_trip.rs  engine_step.rs  memory_round_trip.rs  pyo3_smoke.rs
scripts/: generate_support_matrix.py  run_support_matrix_test.py
spica/: .gitignore  README.md  pyproject.toml
spica/docs/: optimization-goal.md  overview.md  sample.md  search-space.md  structured-parallel-search-plan.md  traffic.md
spica/examples/: glm5-disagg-pareto-frontier-sweep.md  glm5-disagg-pareto-frontier.yaml  planner-goodput-per-gpu-sweep.md  router-e2e-latency-sweep.md  smart_sweep.yaml
spica/src/spica/: __init__.py  __main__.py  _quiet.py  config.py  deploy.py  evaluator.py  kv_estimate.py  load_predictor_sweep.py  model_hw.py  parallel_enum.py  planner.py  sample.py  sampler.py  score.py  search.py  search_space.py
spica/tests/: test_config.py  test_deploy.py  test_evaluator.py  test_kv_estimate.py  test_kv_load.py  test_load_predictor_sweep.py  test_load_predictor_sweep_integration.py  test_model_hw.py  test_parallel_enum.py  test_parallel_projection.py  test_planner.py  test_replay_integration.py  test_sample.py  test_sampler.py  test_score.py  test_search.py  test_search_space.py
spica/tools/: gen_sine_trace.py  run_load_predictor_sweep.py
src/aiconfigurator-core/: pyproject.toml
tests/: README.md  __init__.py  conftest.py  (+9 more)
(+3804 files in other folders)
