# SPDX-FileCopyrightText: Copyright (c) 2025-2026 NVIDIA CORPORATION & AFFILIATES. All rights reserved.
# SPDX-License-Identifier: Apache-2.0

[project]
name = "aiconfigurator-workspace"
version = "0.0.0"
requires-python = ">=3.10"
dependencies = [
    "aiconfigurator==0.10.0",
]

[project.optional-dependencies]
dev = [
    "aiconfigurator[dev]==0.10.0",
]
webapp = [
    "aiconfigurator[webapp]==0.10.0",
]
service = [
    "aiconfigurator[service]==0.10.0",
]
spica = [
    "aiconfigurator[spica]==0.10.0",
]

[tool.uv]
package = false

[tool.uv.workspace]
members = [
    "packages/aiconfigurator-core",
    "packages/aiconfigurator",
]

[tool.uv.sources]
aiconfigurator = { workspace = true }
aiconfigurator-core = { workspace = true }

[tool.ruff]
extend = "packages/aiconfigurator/pyproject.toml"

[tool.ruff.lint.extend-per-file-ignores]
# Collector modules deliberately interleave compatibility probes and imports.
"packages/aiconfigurator/collector/**/*.py" = ["I001"]
"tests/unit/collector/**/*.py" = ["I001"]
