# SPDX-FileCopyrightText: Copyright (c) 2025-2026 NVIDIA CORPORATION & AFFILIATES. All rights reserved.
# SPDX-License-Identifier: Apache-2.0

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "spica"
version = "0.0.1"
description = "Spica: Replay-backed smart sweeper for Dynamo deployments (Profiler V2)"
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
dependencies = [
    "pydantic>=2.5",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff",
]
# Planner load-predictor sweep + (later) Replay evaluator.
#
# Pinned to the #10670 merge commit (the warmup empty-window densify fix).
# ai-dynamo is pure-Python (hatchling), but at this commit main is the
# unreleased 1.3.0 and ai-dynamo-runtime==1.3.0 is NOT on PyPI, so the Rust
# bindings must be built from source at the same commit (needs a Rust
# toolchain). Once 1.3.0 ships, drop the runtime git source and use a released
# "ai-dynamo==1.3.*" pin (prebuilt wheel, no Rust build). For fast local dev you
# can instead editable-install the local dynamo checkout.
#
# Install needs GIT_LFS_SKIP_SMUDGE=1 — the dynamo repo carries LFS media that is
# irrelevant to the build but otherwise fails the clone:
#   GIT_LFS_SKIP_SMUDGE=1 uv pip install -e ".[dev,dynamo]"
#
# The planner load-predictor stack (filterpy/pmdarima/prophet + their
# scikit-learn/scipy pins) is NOT declared by the ai-dynamo package; dynamo
# installs it for the planner service via container/deps/requirements.planner.txt.
# Pinned here to the same versions (same commit) so spica's predictors behave
# identically to the planner's. Keep in sync with that file on dynamo bumps.
dynamo = [
    "ai-dynamo @ git+https://github.com/ai-dynamo/dynamo@4670f248cb79567c06e0c3f9655464b5d94d1cbb",
    "ai-dynamo-runtime @ git+https://github.com/ai-dynamo/dynamo@4670f248cb79567c06e0c3f9655464b5d94d1cbb#subdirectory=lib/bindings/python",
    "filterpy==1.4.5",
    "pmdarima==2.1.1",
    "prophet==1.2.1",
    "scikit-learn==1.7.2",
    "scipy>=1.14.0,<2.0",
]
# Wired in later milestones:
#   search = ["google-vizier"]    # black-box optimizer for the smart sweep

[project.scripts]
spica = "spica.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["src/spica"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
src = ["src", "tests"]
line-length = 120
target-version = "py310"
