# SPDX-FileCopyrightText: Copyright (c) 2025-2026 NVIDIA CORPORATION & AFFILIATES. All rights reserved.
# SPDX-License-Identifier: Apache-2.0

[package]
name = "aiconfigurator-core"
version = "0.9.0"
readme = "README.md"
edition = "2021"
description = "Rust-native core latency estimator for AIConfigurator"
license = "Apache-2.0"

[lib]
name = "aiconfigurator_core"
path = "src/lib.rs"
crate-type = ["rlib", "cdylib"]

[features]
# Enabled by maturin when building the Python extension module. Pulls in the
# optional pyo3 dependency and turns on its extension-module mode (which
# prevents linking libpython at build time). Non-maturin Rust consumers
# (e.g. Dynamo Mocker via the rlib) leave this off and don't pull pyo3 at all.
extension-module = ["dep:pyo3", "pyo3/extension-module"]

[dependencies]
csv = "1.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
pyo3 = { version = "0.22", features = ["abi3-py310"], optional = true }

[dev-dependencies]
tempfile = "3.23"
