# SPDX-FileCopyrightText: Copyright (c) 2025-2026 NVIDIA CORPORATION & AFFILIATES. All rights reserved.
# SPDX-License-Identifier: Apache-2.0

[package]
name = "aiconfigurator-core"
version = "0.9.0"
edition = "2021"
description = "Rust-native core latency estimator for AIConfigurator"
license = "Apache-2.0"

[lib]
name = "aiconfigurator_core"
path = "src/lib.rs"
crate-type = ["rlib", "cdylib"]

[dependencies]
bincode = "1.3"
parquet = { version = "55", default-features = false, features = ["zstd", "snap"] }
pyo3 = { version = "0.23", features = ["abi3-py39", "auto-initialize"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
thiserror = "2.0"

[features]
# `extension-module` is enabled ONLY by the maturin/wheel build (via
# `[tool.maturin] features = ["pyo3/extension-module"]` in pyproject.toml).
# It must NEVER be a default feature: `cargo build`/`cargo test` link
# libpython (via `auto-initialize`) for the Rust->Python embedding path,
# while the maturin-built `.so` skips libpython linkage. See the
# Phase 1.5 execution plan, "Build-system transition".
default = []

[dev-dependencies]
tempfile = "3.23"
