# SPDX-FileCopyrightText: Copyright (c) 2025-2026 NVIDIA CORPORATION & AFFILIATES. All rights reserved.
# SPDX-License-Identifier: Apache-2.0

[project]
name = "aiconfigurator-core"
version = "0.10.0"
authors = [
    { name = "NVIDIA Inc.", email = "sw-dl-dynamo@nvidia.com" },
]
description = "Core modeling, data, and Rust estimators for AIConfigurator"
readme = { text = "Core modeling, data, and Rust estimators for AIConfigurator.", content-type = "text/markdown" }
license = "Apache-2.0"
requires-python = ">=3.10"
dependencies = [
    "packaging>=20.0",
    "matplotlib>=3.9.4",
    "numpy~=1.26.4",
    "pandas>=2.2.3",
    "plotext>=5.3.2",
    "pyarrow>=15.0.0",
    "pyyaml>=6.0",
    "scipy>=1.13.1",
    "tqdm>=4.0.0",
    "nvidia-ml-py",
    "munch>=4.0.0",
]

[build-system]
requires = ["maturin>=1.5,<2"]
build-backend = "maturin"

[tool.maturin]
manifest-path = "../../rust/aiconfigurator-core/Cargo.toml"
module-name = "aiconfigurator_core._aiconfigurator_core"
python-source = ".."
abi3 = true
features = ["pyo3/extension-module"]
include = [
    "aiconfigurator_core/__init__.py",
    "aiconfigurator/sdk/**/*.py",
    "aiconfigurator/systems/*.yaml",
    "aiconfigurator/systems/*.csv",
    "aiconfigurator/systems/**/*.csv",
    "aiconfigurator/systems/**/*.json",
    "aiconfigurator/systems/**/*.txt",
    "aiconfigurator/systems/**/*.parquet",
    "aiconfigurator/model_configs/*.json",
]
