# SPDX-FileCopyrightText: Copyright (c) 2025-2026 NVIDIA CORPORATION & AFFILIATES. All rights reserved.
# SPDX-License-Identifier: Apache-2.0

[project]
name = "aiconfigurator-core"
version = "0.10.0"
authors = [
    { name = "NVIDIA Inc.", email = "sw-dl-dynamo@nvidia.com" },
]
description = "Compatibility package for AIConfigurator's bundled core"
readme = { text = "Compatibility package for the core functionality bundled in AIConfigurator.", content-type = "text/markdown" }
license = "Apache-2.0"
requires-python = ">=3.10"
dependencies = [
    "aiconfigurator==0.10.0",
]

[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = []
